--- a/producer-service/src/main/resources/application.yml
+++ b/producer-service/src/main/resources/application.yml
@@ -2,10 +2,19 @@ spring:
   application:
     name: producer-service
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      retries: 3
+      properties:
+        enable.idempotence: true
 
 server:
-  port: 8081
+  port: ${SERVER_PORT:8081}
+
+logging:
+  level:
+    root: INFO
+    com.ridesharing: DEBUG
