--- a/processor-service/build.gradle
+++ b/processor-service/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'org.springframework.boot'
 }
 
+bootJar {
+    archiveFileName = "${project.name}.jar"
+}
+
 dependencies {
     implementation project(':common')
     implementation 'org.springframework.boot:spring-boot-starter'
