--- a/producer-service/build.gradle
+++ b/producer-service/build.gradle
@@ -2,8 +2,13 @@ plugins {
     id 'org.springframework.boot'
 }
 
+bootJar {
+    archiveFileName = "${project.name}.jar"
+}
+
 dependencies {
     implementation project(':common')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
